Bug 865253 - Part 1: Implement the DOM bindings for OscillatorNode; r=roc

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -806,6 +806,10 @@ DOMInterfaces = {
     'nativeType': 'nsDOMOfflineResourceList',
 },
 
+'OscillatorNode': {
+    'resultNotAddRefed': [ 'frequency', 'detune' ],
+},
+
 'PaintRequest': {
     'nativeType': 'nsPaintRequest',
 },
