--- a/layout/media/Makefile.in
+++ b/layout/media/Makefile.in
@@ -58,7 +58,7 @@ endif
 ifdef MOZ_VP8
 ifndef MOZ_NATIVE_LIBVPX
 SHARED_LIBRARY_LIBS 	+= \
-	$(DEPTH)/media/libvpx/$(LIB_PREFIX)vpx.$(LIB_SUFFIX) \
+	$(DEPTH)/media/libvpx/src/$(LIB_PREFIX)vpx.$(LIB_SUFFIX) \
 	$(NULL)
 endif
 endif
