Bug 763495 - Use gmake instead of pymake.
pymake doesn't understand the libvpx makefile. Fall back to gmake
the same way the b2g gaia build does.

NB: we may need -j1 on windows with msys make as well. The gaia
makefile passes it unconditionally.

--- a/media/libvpx/Makefile.in
+++ b/media/libvpx/Makefile.in
@@ -1,4 +1,11 @@
 
+# We can't use pymake, so use gmake instead. mozmake is ok.
+ifdef .PYMAKE
+  VPX_MAKE = $(GMAKE) -j1
+else
+  VPX_MAKE = $(MAKE)
+endif
+
 default export::
-	$(MAKE) -C src
+	$(VPX_MAKE) -C src
 
